--- a/Backend/Backend/Web.config
+++ b/Backend/Backend/Web.config
@@ -7,6 +7,10 @@
 
 <configuration>
 
+    <connectionStrings>
+        <add name="eventSiteConnectionString" connectionString="Data Source=LAPTOP-7EF0LKRM\SQLEXPRESS;Initial Catalog=eventSite;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <system.web>
       <compilation debug="true" targetFramework="4.7.2"/>
       <httpRuntime targetFramework="4.7.2"/>
